--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -2,7 +2,7 @@
 
 <h2>Product Listings</h2>
 
-<table class="table table-striped table-dark">
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
