--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -47,7 +47,6 @@
       <th>Price</th>
       <th>Approved</th>
       <th>Image</th>
-      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -58,10 +57,9 @@
         <td><%= product_listing.name %></td>
         <td><%= product_listing.brand %></td>
         <td><%= product_listing.description %></td>
-        <td><%= product_listing.price %></td>
+        <td>$<%= product_listing.price %></td>
         <td><%= product_listing.approved %></td>
         <td><%= cl_image_tag(product_listing.image.key, crop: :scale, width: 100, cloud_name: 'ashlii')%></td>
-        <td><%= product_listing.user_id %></td>
         <td><%= link_to 'Show', product_listing %></td>
         <td><%= link_to 'Edit', edit_product_listing_path(product_listing) %></td>
         <td><%= link_to 'Destroy', product_listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
