--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,7 +1,7 @@
 <h1>Profile</h1>
 
 <table class="table">
-    <thead>
+  <thead class="thead-dark">
       <tr>
           <th>Email</th>
         <th>First Name</th>
@@ -39,7 +39,7 @@
   <h2>My Listings</h2>
 
 <table class="table">
-  <thead>
+  <thead class="thead-dark">
     <tr>
       <th>Name</th>
       <th>Brand</th>
