--- a/app/views/product_listings/index.html.erb
+++ b/app/views/product_listings/index.html.erb
@@ -44,12 +44,8 @@
 
 </div>
 
-<div>
-  <%= link_to "Next Page", product_listings_path(page: @page + 1) %>
-  |
-  <%= link_to "Previous Page", product_listings_path(page: @page - 1) %>
 
-</div>
+<%= will_paginate @product_listings %>
 <nav aria-label="Page navigation example">
   <ul class="pagination">
     <li class="page-item"><a class="page-link" href="#">Previous</a></li>
