--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -78,4 +78,32 @@
   </table>
 
 <br>
+<h2>Sales</h2>
+<table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Product</th>
+        <th>Buyer ID</th>
+        <th>Seller ID</th>
+        <th>Amount</th>
+       
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+  
+    <tbody>
+      <% @orders.each do |order| %>
+      <tr>
+        <td><%= order.product_listing_id %></td>
+        <td><%= order.user_id %></td>
+        <td><%= order.seller_email%></td>
+        <td><%= order.amount %></td>
+      </tr>
+    <% end %>
+
+
+    </tbody>
+  </table>
+
+
 <%= link_to 'Back to Wardrobe', product_listings_path %>
