--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -15,7 +15,7 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
+<!-- calling the product listings from the controller in order to render each product listing and its attributes -->
   <tbody>
     <% @product_listings.each do |product_listing| %>
       <tr>
@@ -82,8 +82,8 @@
     <thead>
       <tr>
         <th>Product</th>
-        <th>Buyer ID</th>
-        <th>Seller ID</th>
+        <th>Buyer Email</th>
+        <th>Seller Email</th>
         <th>Amount</th>
        
         <th colspan="3"></th>
@@ -91,12 +91,12 @@
     </thead>
   
     <tbody>
-      <% @orders.each do |order| %>
+      <% @sales.each do |sale| %>
       <tr>
-        <td><%= order.product_listing_id %></td>
-        <td><%= order.user_id %></td>
-        <td><%= order.seller_email%></td>
-        <td><%= order.amount %></td>
+        <td><%= sale.product_listing_id %></td>
+        <td><%= sale.user_email%></td>
+        <td><%= sale.seller_email%></td>
+        <td><%= sale.amount %></td>
       </tr>
     <% end %>
 
