--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -15,7 +15,6 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-<!-- calling the product listings from the controller in order to render each product listing and its attributes -->
   <tbody>
     <% @product_listings.each do |product_listing| %>
       <tr>
@@ -58,7 +57,7 @@
     <tbody>
 
 
-      <% @user.each do |u| %>
+      <% @users.each do |u| %>
         <tr>
           <td><%= u.id %></td>
           <td><%= u.email %></td>
@@ -94,7 +93,7 @@
       <% @sales.each do |sale| %>
       <tr>
         <td><%= sale.product_listing_id %></td>
-        <td><%= sale.user_email%></td>
+        <td><%= sale.buyer_email%></td>
         <td><%= sale.seller_email%></td>
         <td><%= sale.amount %></td>
       </tr>
