--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -34,6 +34,7 @@
 </table>
 
 <br>
+<%= link_to 'New Product Listing', new_product_listing_path, class: "btn btn-primary" %>
 <%= link_to 'Back to Wardrobe', product_listings_path, class:"btn btn-primary" %>
 
 
