--- a/app/views/payments/success.html.erb
+++ b/app/views/payments/success.html.erb
@@ -5,6 +5,43 @@
     Thank you for your purchase!
     We will be in contact with you shortly
   </p>
+
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">
+    <p><%= cl_image_tag(@product_listing.image.key, crop: :scale, width: 285, cloud_name: 'ashlii')%></p>
+      
+          <% if current_user.id == @product_listing.user_id %>
+            <strong>This is your listing</strong>
+          <%end%>
+          <br>
+          <p>
+            <strong>Name:</strong>
+            <%= @product_listing.name %>
+          </p>
+          <p>
+            <strong>Brand:</strong>
+            <%= @product_listing.brand %>
+          </p></h5>
+        <p class="card-text">
+          <p>
+            <strong>Description:</strong>
+            <%= @product_listing.description %>
+          </p>
+          <p>
+            <strong>Price:</strong>
+            $<%= @product_listing.price %>
+          </p>
+          
+          <p>
+            <strong>Category:</strong>
+            <%= @product_listing.category %>
+          </p>
+
+          <p>
+            <strong>Colour:</strong>
+            <%= @product_listing.colour %>
+          </p>
   
   <%= link_to 'Back to Wardrobe', product_listings_path, class: "btn btn-primary" %>
 </div>
