--- a/app/views/product_listings/_form.html.erb
+++ b/app/views/product_listings/_form.html.erb
@@ -13,7 +13,7 @@
     <% if current_user.has_role? :admin %>
     <%= f.input :approved %>
     <%end%>
-    <p>Please email your item's serial number or receipt to luxethique1@gmail.com</p>
+    <p><strong>Please email your item's serial number or receipt to luxethique1@gmail.com</strong></p>
     <%= f.file_field :image %>
   </div>
 <p><strong>Please note submissions may take up to 2 working days to be processed.
